[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
byteorder = "1.5.0"
data-encoding = "2.9.0"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
